--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Blue-Shift Launcher</string>
+    <string name="app_name">CSDM Launcher</string>
 
     <string name="title_activity_launcher">LauncherActivity</string>
-    <string name="launch_button">Launch Blue-Shift!</string>
+    <string name="launch_button">Launch CSDM!</string>
     <string name="cmd_args_text">Command line arguments(experts only)</string>
     <!--
 	<string name="text_shortcut">SoHL shortcut</string>
